# Replibook

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question_or_support.yml
.github/workflows/: ci.yml  release-validation.yml
docs/: documentation.md  knowledgebase.md
replibook/: __init__.py  apply.py  cli.py  main.py  modules.py  profiles.py  review.py  runtime.py  wizard.py
replibook/generator/: __init__.py  playbook.py
replibook/generator/templates/: site.yml.j2
replibook/gui/: __init__.py  app.py
replibook/models/: __init__.py  scan_result.py
replibook/scanner/: __init__.py  base.py  config_state.py  deployments.py  docker_scanner.py  network.py  packages.py  scheduled_tasks.py  services.py  system.py
replibook/utils/: __init__.py  os_detect.py
scripts/: build-windows.ps1
tests/: test_cli_diff.py  test_deployment_scanner.py  test_docker_scanner.py
